# ImmersAV

./: .gitignore  .vrmanifest  CMakeLists.txt  LICENSE  README.md  newCmakeBuild.bat  newCmakeBuild.sh
data/: immersAV_actions.json  immersAV_bindings_default.json  immersAV_bindings_generic.json  immersAV_bindings_vive_controller.json  immersAV_iml_actions.json  immersAV_iml_default_bindings.json  mySavedModel_cyclicalEx.json  old_immersAV_actions.json
doc/html/: _csound_session_8hpp_source.html  annotated.html  class_cs_perf_thread___perform_score-members.html  class_cs_perf_thread___perform_score.html  class_cs_perf_thread_msg___input_message-members.html  class_cs_perf_thread_msg___input_message.html  class_cs_perf_thread_msg___pause-members.html  class_cs_perf_thread_msg___pause.html  class_cs_perf_thread_msg___play-members.html  class_cs_perf_thread_msg___play.html  class_cs_perf_thread_msg___record-members.html  class_cs_perf_thread_msg___record.html  class_cs_perf_thread_msg___score_event-members.html  class_cs_perf_thread_msg___score_event.html  class_cs_perf_thread_msg___set_score_offset_seconds-members.html  class_cs_perf_thread_msg___set_score_offset_seconds.html  class_cs_perf_thread_msg___stop-members.html  class_cs_perf_thread_msg___stop.html  class_cs_perf_thread_msg___stop_record-members.html  class_cs_perf_thread_msg___stop_record.html  class_cs_perf_thread_msg___toggle_pause-members.html  class_cs_perf_thread_msg___toggle_pause.html  class_csound_performance_thread-members.html  class_csound_performance_thread.html  class_csound_performance_thread_message-members.html  class_csound_performance_thread_message.html  class_csound_session-members.html  class_csound_session.html  classes.html  cs_perf_thread_8hpp_source.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  lodepng_8h_source.html  md__r_e_a_d_m_e.html  pages.html  struct_b_p_m_lists-members.html  struct_b_p_m_lists.html  (+32 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  pages_0.js  searchdata.js
doc/latex/: annotated.tex  class_cs_perf_thread___perform_score.tex  class_cs_perf_thread_msg___input_message.eps  class_cs_perf_thread_msg___input_message.tex  class_cs_perf_thread_msg___pause.eps  class_cs_perf_thread_msg___pause.tex  class_cs_perf_thread_msg___play.eps  class_cs_perf_thread_msg___play.tex  class_cs_perf_thread_msg___record.eps  class_cs_perf_thread_msg___record.tex  class_cs_perf_thread_msg___score_event.eps  class_cs_perf_thread_msg___score_event.tex  class_cs_perf_thread_msg___set_score_offset_seconds.eps  class_cs_perf_thread_msg___set_score_offset_seconds.tex  class_cs_perf_thread_msg___stop.eps  class_cs_perf_thread_msg___stop.tex  class_cs_perf_thread_msg___stop_record.eps  class_cs_perf_thread_msg___stop_record.tex  class_cs_perf_thread_msg___toggle_pause.eps  class_cs_perf_thread_msg___toggle_pause.tex  class_csound_performance_thread.tex  class_csound_performance_thread_message.eps  class_csound_performance_thread_message.tex  class_csound_session.eps  class_csound_session.tex  hierarchy.tex  md__r_e_a_d_m_e.tex  refman.tex  struct_b_p_m_lists.tex  struct_b_p_m_node.tex  struct_color_tree.tex  struct_hash.tex  struct_huffman_tree.tex  struct_lode_p_n_g_color_mode.tex  struct_lode_p_n_g_color_profile.tex  struct_lode_p_n_g_compress_settings.tex  struct_lode_p_n_g_decoder_settings.tex  struct_lode_p_n_g_decompress_settings.tex  struct_lode_p_n_g_encoder_settings.tex  struct_lode_p_n_g_info.tex  (+5 more)
examples/: audioReactive_example.csd  audioReactive_example.frag  cyclicalMapping_example.csd  cyclicalMapping_example.frag  immAVWshop.csd  immAVWshop.frag  session2_immAVWshop.csd  session2_immAVWshop.frag  session_immAVWshop.frag  simultaneousDataMapping_example.csd  simultaneousDataMapping_example.vert
src/: CMakeLists.txt  Callback.csd  CsoundSession.cpp  CsoundSession.hpp  Doxyfile  avrConfig.h.in  csPerfThread.cpp  immersAVConfig.h.in  main.cpp
src/AvrApp/: AvrApp.cpp  AvrApp.hpp  CMakeLists.txt
src/FiveCell/: CMakeLists.txt  FiveCell.cpp  FiveCell.hpp  Skybox.hpp  SoundObject.cpp  groundPlane.frag  kifs_sierpinski.frag  menger.vert  mode5cell.csd  sculpture1.csd  skybox.frag  soundObj.frag  soundObj.vert
src/ImmersAVApp/: CMakeLists.txt  ImmersAVApp.cpp  ImmersAVApp.hpp
src/JSON/: CMakeLists.txt
src/LibSVM/: CMakeLists.txt
src/RapidLib/: CmakeLists.txt  baseModel.h  knnClassification.h  modelSet.cpp  modelSet.h  neuralNetwork.h  svmClassification.h
src/Studio/: CMakeLists.txt  Skybox.cpp  SoundObject.hpp  Studio.cpp  Studio.hpp  StudioTools.cpp  StudioTools.hpp  audioReactive_example.vert  avrImlMandelBulbDemo.csd  avr_mandelGrain.csd  cyclicalMapping_example.frag  example.csd  example.frag  groundPlane.vert  menger.frag  mengerAlt.frag  mengerAlt.vert  mengerGlass.frag  mengerGlass.vert  quad.frag  quad.vert  rasterPolychoron.frag  rasterPolychoron.vert  sculpture2.csd  session2_Studio.cpp  session2_Studio.hpp  simultaneousDataMapping_example.frag  skybox.vert
src/VR/: CMakeLists.txt  VR_Helper.cpp  VR_Helper.hpp  VR_Manager.cpp  VR_Manager.hpp  avr_iml_actions.json  avr_iml_default_bindings.json  old_VR_Manager.cpp
src/ValveTools/: CMakeLists.txt  pathtools.cpp  pathtools.h  pathtools.mm  strtools.cpp
src/Visual/: CGLRenderModel.cpp  CGLRenderModel.hpp  CMakeLists.txt  Graphics.cpp  Graphics.hpp  Log.cpp  Log.hpp  ShaderManager.cpp  ShaderManager.hpp  SystemInfo.cpp  SystemInfo.hpp  generic.vert  genericFrag.frag  mengerTest.frag  polytope.frag  tetra.frag  tetra.vert
